Post-WD02 audit fixes + spec amendments + KB lessons (#51)
* chore: upgrade vallorcine to v0.15.0

Work-layer redesign — /work-decompose Phase A/B/C, /work-status state-routing,
cross-group dependencies via external_deps:, Group Envelope handoff into
/work-plan + /feature-domains, plus three pre-existing bug fixes from
end-to-end exercise.

110 files updated; 3 user CLAUDE.md indexes preserved.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(audit): 21 prove-fix corrections from WD-02 adversarial audit

Adversarial audit on the merged WD-02 branch found 45 findings and
fixed 21 confirmed bugs across the encryption write/read frontier.
Highlights:

- LocalEngine.createJlsmTable now wires EngineWriterCommitHook +
  scope/dekVersions through TrieSSTableWriter.builder(), closing the
  silent v6-emit bypass on encrypted-table flushes.
- DocumentSerializer.deserialize accepts ReadContext and threads it
  through FieldEncryptionDispatch.decryptWithContext (R3e gate
  previously had zero production call sites).
- TrieSSTableReader exposes a typed get() that wires its readContext
  into the consumer-side R3e gate.
- V6Footer hardens: defensive snapshot of caller-supplied DEK array
  on encode, unmodifiable Set publication on parse, RuntimeException
  catch broadening on commit-hook failure, fsync-listener invocation
  for non-FileChannel writers.
- FileBasedCatalogLock fixes: TOCTOU on close, intra-JVM re-entry
  rejection, monotonic reclaim clock, ProcessHandle PID liveness,
  holder-thread close guard, refcounted bounded jvmLocks map.
- TableCatalog/CatalogIndex stage-then-publish ordering on register
  + updateEncryption + setHighwater + open() cross-process register
  race resolution.
- CiphertextValidator: 4-byte BE DEK version positivity guard.
- EnvelopeCodec.stripPrefix harmonized to throw IOException for
  under-length input (matches sibling parseVersion).
- New EngineWriterCommitHook SPI implementation in jlsm-engine.

Tests: ./gradlew 